--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_mobx: ^2.0.6+5
+  analyzer: ^5.4.0
   
 
 dev_dependencies:
